[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/parents/parent_enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Enemies/enemy_calavera.png" type="Texture" id=2]
[ext_resource path="res://Scripts/enemy_esqueleto.gd" type="Script" id=3]
[ext_resource path="res://Scenes/actors/enemies/playerDetector.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2, 3 )

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "running"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "sleep"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=5]
resource_name = "throwing"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "throw_calavera"
}, {
"args": [  ],
"method": "start_running"
} ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3, 4 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2, 6 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 64, 15 )

[node name="enemy_esqueleto" instance=ExtResource( 1 )]
collision_mask = 2
script = ExtResource( 3 )
velocity = 50

[node name="EnemyStats" parent="." index="0"]
max_health = 3

[node name="Sprite" parent="." index="1"]
position = Vector2( 0, -6 )
texture = ExtResource( 2 )
hframes = 6
frame = 4

[node name="CalaveraPostiion" type="Position2D" parent="Sprite" index="0"]
position = Vector2( 0, -2 )

[node name="wallDetector" type="RayCast2D" parent="Sprite" index="1"]
position = Vector2( 2, 2 )
enabled = true
cast_to = Vector2( 3, 0 )
collision_mask = 2

[node name="floorDetector" type="RayCast2D" parent="Sprite" index="2"]
position = Vector2( 3, 6 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 2

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" parent="." index="3"]
autoplay = "sleep"
anims/idle = SubResource( 2 )
anims/running = SubResource( 3 )
anims/sleep = SubResource( 4 )
anims/throwing = SubResource( 5 )

[node name="Hitbox" parent="." index="4"]
position = Vector2( 0, -4 )

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 6 )

[node name="Hurtbox" parent="." index="5"]
position = Vector2( 0, -6 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 7 )

[node name="playerDetector" parent="." index="6" instance=ExtResource( 4 )]
position = Vector2( 0, -7 )

[node name="CollisionShape2D" parent="playerDetector" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 8 )

[node name="attackDelay" type="Timer" parent="." index="7"]
wait_time = 0.3
one_shot = true

[connection signal="playerDetected" from="playerDetector" to="." method="_on_playerDetector_playerDetected"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="playerDetector"]
